[gd_scene load_steps=14 format=4 uid="uid://c1bg0l5kxh0w8"]

[ext_resource type="Script" uid="uid://6kcpllew1pvc" path="res://scenes/game_scene/levels/level.gd" id="1_623lg"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/scripts/capture_focus.gd" id="2_sycfm"]
[ext_resource type="Script" uid="uid://dlhbrffnyise4" path="res://scenes/game_scene/input_display_label.gd" id="3_pmyid"]
[ext_resource type="Script" uid="uid://duincf0box4om" path="res://scenes/game_scene/tutorial_manager.gd" id="4_bsimd"]
[ext_resource type="PackedScene" uid="uid://dpx7y1w37eysu" path="res://scenes/game_scene/tutorials/tutorial_1.tscn" id="5_fmabn"]
[ext_resource type="Script" uid="uid://nuslap3qp6us" path="res://scenes/prototype_2.gd" id="6_8avtb"]
[ext_resource type="TileSet" uid="uid://bvsvefc2b128j" path="res://assets/environment/prototype_tileset.tres" id="6_85t3v"]
[ext_resource type="Script" uid="uid://dedftrkeydnae" path="res://addons/TopDownCamera2D/top_down_camera_2d.gd" id="7_8avtb"]
[ext_resource type="Script" uid="uid://cyjj3nyqr8e3y" path="res://addons/state_machine_nodes/state_machine.gd" id="8_ua84b"]
[ext_resource type="Script" uid="uid://b0rjcl4gh7qnt" path="res://scripts/state/player_turn.gd" id="9_hehv2"]
[ext_resource type="Script" uid="uid://df7f5w56r54ey" path="res://scripts/state/explorer_turn.gd" id="10_27a66"]
[ext_resource type="Script" uid="uid://bkt7valp0sru4" path="res://scripts/state/init_level.gd" id="10_ua84b"]

[sub_resource type="LabelSettings" id="LabelSettings_m77gi"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_623lg")

[node name="BackgroundColor" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TutorialManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_bsimd")
tutorial_scenes = Array[PackedScene]([ExtResource("5_fmabn")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BlockadeLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Blockades: 0/3"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
script = ExtResource("2_sycfm")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TutorialButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Tutorial"

[node name="InputDisplayLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
script = ExtResource("3_pmyid")

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Change Level State: "

[node name="NextTurnButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "End Turn"

[node name="Level" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("6_8avtb")

[node name="Floor" type="TileMapLayer" parent="Level"]
unique_name_in_owner = true
y_sort_enabled = true
tile_map_data = PackedByteArray("AADV/+v/AQAGAAIAAADV/+z/AQAEAAIAAADV/+3/AQAEAAIAAADV/+7/AQAEAAIAAADV/+//AQAHAAIAAADV//D/AQAFAAIAAADV//H/AQAFAAIAAADV//L/AQAEAAIAAADV//P/AQAFAAIAAADV//T/AQAHAAIAAADV//X/AQAGAAIAAADV//b/AQAGAAIAAADV//f/AQAGAAIAAADV//j/AQAEAAIAAADV//n/AQAHAAIAAADV//r/AQAFAAIAAADV//v/AQAHAAIAAADV//z/AQAGAAIAAADV//3/AQAHAAIAAADV//7/AQAFAAIAAADV////AQAEAAIAAADV/wAAAQAGAAIAAADV/wEAAQAGAAIAAADV/wIAAQAEAAIAAADV/wMAAQAHAAIAAADV/wQAAQAFAAIAAADV/wUAAQAHAAIAAADV/wYAAQAGAAIAAADV/wcAAQAGAAIAAADV/wgAAQAEAAIAAADV/wkAAQAHAAIAAADV/woAAQAFAAIAAADV/wsAAQAHAAIAAADV/wwAAQAGAAIAAADV/w0AAQAHAAIAAADV/w4AAQAFAAIAAADV/w8AAQAEAAIAAADV/xAAAQAFAAIAAADW/+v/AQAEAAIAAADW/+z/AQAcAAIAAADW/+3/AQAdAAIAAADW/+7/AQAdAAIAAADW/+//AQAcAAIAAADW//D/AQAcAAIAAADW//H/AQAdAAIAAADW//L/AQAfAAIAAADW//P/AQAcAAIAAADW//T/AQAeAAIAAADW//X/AQAeAAIAAADW//b/AQAeAAIAAADW//f/AQAfAAIAAADW//j/AQAcAAIAAADW//n/AQAfAAIAAADW//r/AQAdAAIAAADW//v/AQAfAAIAAADW//z/AQAdAAIAAADW//3/AQAcAAIAAADW//7/AQAcAAIAAADW////AQAeAAIAAADW/wAAAQAeAAIAAADW/wEAAQAfAAIAAADW/wIAAQAcAAIAAADW/wMAAQAfAAIAAADW/wQAAQAdAAIAAADW/wUAAQAfAAIAAADW/wYAAQAdAAIAAADW/wcAAQAfAAIAAADW/wgAAQAcAAIAAADW/wkAAQAfAAIAAADW/woAAQAdAAIAAADW/wsAAQAfAAIAAADW/wwAAQAdAAIAAADW/w0AAQAcAAIAAADW/w4AAQAcAAIAAADW/w8AAQAeAAIAAADW/xAAAQAHAAIAAADX/+v/AQAFAAIAAADX/+z/AQAeAAIAAADX/+3/AQAeAAIAAADX/+7/AQAeAAIAAADX/+//AQAdAAIAAADX//D/AQAfAAIAAADX//H/AQAeAAIAAADX//L/AQAfAAIAAADX//P/AQAcAAIAAADX//T/AQAfAAIAAADX//X/AQAcAAIAAADX//b/AQAdAAIAAADX//f/AQAfAAIAAADX//j/AQAfAAIAAADX//n/AQAdAAIAAADX//r/AQAeAAIAAADX//v/AQAdAAIAAADX//z/AQAdAAIAAADX//3/AQAfAAIAAADX//7/AQAfAAIAAADX////AQAdAAIAAADX/wAAAQAdAAIAAADX/wEAAQAfAAIAAADX/wIAAQAfAAIAAADX/wMAAQAdAAIAAADX/wQAAQAeAAIAAADX/wUAAQAdAAIAAADX/wYAAQAdAAIAAADX/wcAAQAfAAIAAADX/wgAAQAfAAIAAADX/wkAAQAdAAIAAADX/woAAQAeAAIAAADX/wsAAQAdAAIAAADX/wwAAQAdAAIAAADX/w0AAQAfAAIAAADX/w4AAQAfAAIAAADX/w8AAQAdAAIAAADX/xAAAQAFAAIAAADY/+v/AQAHAAIAAADY/+z/AQAcAAIAAADY/+3/AQAfAAIAAADY/+7/AQAdAAIAAADY/+//AQAeAAIAAADY//D/AQAfAAIAAADY//H/AQAcAAIAAADY//L/AQAdAAIAAADY//P/AQAdAAIAAADY//T/AQAfAAIAAADY//X/AQAeAAIAAADY//b/AQAfAAIAAADY//f/AQAeAAIAAADY//j/AQAfAAIAAADY//n/AQAfAAIAAADY//r/AQAeAAIAAADY//v/AQAfAAIAAADY//z/AQAcAAIAAADY//3/AQAcAAIAAADY//7/AQAeAAIAAADY////AQAdAAIAAADY/wAAAQAfAAIAAADY/wEAAQAeAAIAAADY/wIAAQAfAAIAAADY/wMAAQAfAAIAAADY/wQAAQAeAAIAAADY/wUAAQAfAAIAAADY/wYAAQAcAAIAAADY/wcAAQAeAAIAAADY/wgAAQAfAAIAAADY/wkAAQAfAAIAAADY/woAAQAeAAIAAADY/wsAAQAfAAIAAADY/wwAAQAcAAIAAADY/w0AAQAcAAIAAADY/w4AAQAeAAIAAADY/w8AAQAdAAIAAADY/xAAAQAEAAIAAADZ/+v/AQAGAAIAAADZ/+z/AQAeAAIAAADZ/+3/AQAfAAIAAADZ/+7/AQAdAAIAAADZ/+//AQAeAAIAAADZ//D/AQAeAAIAAADZ//H/AQAfAAIAAADZ//L/AQAeAAIAAADZ//P/AQAfAAIAAADZ//T/AQAcAAIAAADZ//X/AQAfAAIAAADZ//b/AQAeAAIAAADZ//f/AQAcAAIAAADZ//j/AQAfAAIAAADZ//n/AQAcAAIAAADZ//r/AQAdAAIAAADZ//v/AQAfAAIAAADZ//z/AQAeAAIAAADZ//3/AQAdAAIAAADZ//7/AQAeAAIAAADZ////AQAcAAIAAADZ/wAAAQAeAAIAAADZ/wEAAQAcAAIAAADZ/wIAAQAfAAIAAADZ/wMAAQAcAAIAAADZ/wQAAQAdAAIAAADZ/wUAAQAfAAIAAADZ/wYAAQAeAAIAAADZ/wcAAQAcAAIAAADZ/wgAAQAfAAIAAADZ/wkAAQAcAAIAAADZ/woAAQAdAAIAAADZ/wsAAQAfAAIAAADZ/wwAAQAeAAIAAADZ/w0AAQAdAAIAAADZ/w4AAQAeAAIAAADZ/w8AAQAcAAIAAADZ/xAAAQAHAAIAAADa/+v/AQAFAAIAAADa/+z/AQAcAAIAAADa/+3/AQAcAAIAAADa/+7/AQAeAAIAAADa/+//AQAfAAIAAADa//D/AQAfAAIAAADa//H/AQAcAAIAAADa//L/AQAdAAIAAADa//P/AQAdAAIAAADa//T/AQAeAAIAAADa//X/AQAdAAIAAADa//b/AQAdAAIAAADa//f/AQAdAAIAAADa//j/AQAfAAIAAADa//n/AQAfAAIAAADa//r/AQAeAAIAAADa//v/AQAeAAIAAADa//z/AQAcAAIAAADa//3/AQAcAAIAAADa//7/AQAcAAIAAADa////AQAeAAIAAADa/wAAAQAdAAIAAADa/wEAAQAdAAIAAADa/wIAAQAfAAIAAADa/wMAAQAfAAIAAADa/wQAAQAeAAIAAADa/wUAAQAeAAIAAADa/wYAAQAcAAIAAADa/wcAAQAdAAIAAADa/wgAAQAfAAIAAADa/wkAAQAfAAIAAADa/woAAQAeAAIAAADa/wsAAQAeAAIAAADa/wwAAQAcAAIAAADa/w0AAQAcAAIAAADa/w4AAQAcAAIAAADa/w8AAQAeAAIAAADa/xAAAQAHAAIAAADb/+v/AQAEAAIAAADb/+z/AQAdAAIAAADb/+3/AQAcAAIAAADb/+7/AQAdAAIAAADb/+//AQAfAAIAAADb//D/AQAfAAIAAADb//H/AQAeAAIAAADb//L/AQAdAAIAAADb//P/AQAcAAIAAADb//T/AQAfAAIAAADb//X/AQAcAAIAAADb//b/AQAcAAIAAADb//f/AQAdAAIAAADb//j/AQAcAAIAAADb//n/AQAfAAIAAADb//r/AQAdAAIAAADb//v/AQAcAAIAAADb//z/AQAdAAIAAADb//3/AQAeAAIAAADb//7/AQAdAAIAAADb////AQAfAAIAAADb/wAAAQAcAAIAAADb/wEAAQAdAAIAAADb/wIAAQAcAAIAAADb/wMAAQAfAAIAAADb/wQAAQAdAAIAAADb/wUAAQAcAAIAAADb/wYAAQAdAAIAAADb/wcAAQAdAAIAAADb/wgAAQAcAAIAAADb/wkAAQAfAAIAAADb/woAAQAdAAIAAADb/wsAAQAcAAIAAADb/wwAAQAdAAIAAADb/w0AAQAeAAIAAADb/w4AAQAdAAIAAADb/w8AAQAfAAIAAADb/xAAAQAEAAIAAADc/+v/AQAGAAIAAADc/+z/AQAcAAIAAADc/+3/AQAdAAIAAADc/+7/AQAdAAIAAADc/+//AQAeAAIAAADc//D/AQAfAAIAAADc//H/AQAfAAIAAADc//L/AQAdAAIAAADc//P/AQAeAAIAAADc//T/AQAcAAIAAADc//X/AQAeAAIAAADc//b/AQAfAAIAAADc//f/AQAeAAIAAADc//j/AQAeAAIAAADc//n/AQAcAAIAAADc//r/AQAfAAIAAADc//v/AQAeAAIAAADc//z/AQAeAAIAAADc//3/AQAcAAIAAADc//7/AQAcAAIAAADc////AQAeAAIAAADc/wAAAQAfAAIAAADc/wEAAQAeAAIAAADc/wIAAQAeAAIAAADc/wMAAQAcAAIAAADc/wQAAQAfAAIAAADc/wUAAQAeAAIAAADc/wYAAQAeAAIAAADc/wcAAQAeAAIAAADc/wgAAQAeAAIAAADc/wkAAQAcAAIAAADc/woAAQAfAAIAAADc/wsAAQAeAAIAAADc/wwAAQAeAAIAAADc/w0AAQAcAAIAAADc/w4AAQAcAAIAAADc/w8AAQAeAAIAAADc/xAAAQAFAAIAAADd/+v/AQAEAAIAAADd/+z/AQAfAAIAAADd/+3/AQAdAAIAAADd/+7/AQAeAAIAAADd/+//AQAcAAIAAADd//D/AQAcAAIAAADd//H/AQAfAAIAAADd//L/AQAdAAIAAADd//P/AQAeAAIAAADd//T/AQAdAAIAAADd//X/AQAeAAIAAADd//b/AQAfAAIAAADd//f/AQAcAAIAAADd//j/AQAcAAIAAADd//n/AQAcAAIAAADd//r/AQAfAAIAAADd//v/AQAeAAIAAADd//z/AQAfAAIAAADd//3/AQAeAAIAAADd//7/AQAfAAIAAADd////AQAdAAIAAADd/wAAAQAfAAIAAADd/wEAAQAcAAIAAADd/wIAAQAcAAIAAADd/wMAAQAcAAIAAADd/wQAAQAfAAIAAADd/wUAAQAeAAIAAADd/wYAAQAfAAIAAADd/wcAAQAcAAIAAADd/wgAAQAcAAIAAADd/wkAAQAcAAIAAADd/woAAQAfAAIAAADd/wsAAQAeAAIAAADd/wwAAQAfAAIAAADd/w0AAQAeAAIAAADd/w4AAQAfAAIAAADd/w8AAQAdAAIAAADd/xAAAQAHAAIAAADe/+v/AQAGAAIAAADe/+z/AQAfAAIAAADe/+3/AQAcAAIAAADe/+7/AQAfAAIAAADe/+//AQAdAAIAAADe//D/AQAeAAIAAADe//H/AQAfAAIAAADe//L/AQAfAAIAAADe//P/AQAeAAIAAADe//T/AQAdAAIAAADe//X/AQAeAAIAAADe//b/AQAeAAIAAADe//f/AQAeAAIAAADe//j/AQAdAAIAAADe//n/AQAfAAIAAADe//r/AQAcAAIAAADe//v/AQAdAAIAAADe//z/AQAfAAIAAADe//3/AQAfAAIAAADe//7/AQAcAAIAAADe////AQAdAAIAAADe/wAAAQAeAAIAAADe/wEAAQAeAAIAAADe/wIAAQAdAAIAAADe/wMAAQAfAAIAAADe/wQAAQAcAAIAAADe/wUAAQAdAAIAAADe/wYAAQAfAAIAAADe/wcAAQAeAAIAAADe/wgAAQAdAAIAAADe/wkAAQAfAAIAAADe/woAAQAcAAIAAADe/wsAAQAdAAIAAADe/wwAAQAfAAIAAADe/w0AAQAfAAIAAADe/w4AAQAcAAIAAADe/w8AAQAdAAIAAADe/xAAAQAGAAIAAADf/+v/AQAGAAIAAADf/+z/AQAfAAIAAADf/+3/AQAeAAIAAADf/+7/AQAdAAIAAADf/+//AQAcAAIAAADf//D/AQAdAAIAAADf//H/AQAeAAIAAADf//L/AQAdAAIAAADf//P/AQAeAAIAAADf//T/AQAfAAIAAADf//X/AQAeAAIAAADf//b/AQAdAAIAAADf//f/AQAcAAIAAADf//j/AQAfAAIAAADf//n/AQAdAAIAAADf//r/AQAfAAIAAADf//v/AQAdAAIAAADf//z/AQAfAAIAAADf//3/AQAeAAIAAADf//7/AQAcAAIAAADf////AQAfAAIAAADf/wAAAQAdAAIAAADf/wEAAQAcAAIAAADf/wIAAQAfAAIAAADf/wMAAQAdAAIAAADf/wQAAQAfAAIAAADf/wUAAQAdAAIAAADf/wYAAQAfAAIAAADf/wcAAQAcAAIAAADf/wgAAQAfAAIAAADf/wkAAQAdAAIAAADf/woAAQAfAAIAAADf/wsAAQAdAAIAAADf/wwAAQAfAAIAAADf/w0AAQAeAAIAAADf/w4AAQAcAAIAAADf/w8AAQAfAAIAAADf/xAAAQAGAAIAAADg/+v/AQAGAAIAAADg/+z/AQAdAAIAAADg/+3/AQAdAAIAAADg/+7/AQAcAAIAAADg/+//AQAeAAIAAADg//D/AQAcAAIAAADg//H/AQAdAAIAAADg//L/AQAeAAIAAADg//P/AQAfAAIAAADg//T/AQAcAAIAAADg//X/AQAfAAIAAADg//b/AQAfAAIAAADg//f/AQAdAAIAAADg//j/AQAfAAIAAADg//n/AQAfAAIAAADg//r/AQAcAAIAAADg//v/AQAcAAIAAADg//z/AQAdAAIAAADg//3/AQAfAAIAAADg//7/AQAeAAIAAADg////AQAfAAIAAADg/wAAAQAfAAIAAADg/wEAAQAdAAIAAADg/wIAAQAfAAIAAADg/wMAAQAfAAIAAADg/wQAAQAcAAIAAADg/wUAAQAcAAIAAADg/wYAAQAdAAIAAADg/wcAAQAdAAIAAADg/wgAAQAfAAIAAADg/wkAAQAfAAIAAADg/woAAQAcAAIAAADg/wsAAQAcAAIAAADg/wwAAQAdAAIAAADg/w0AAQAfAAIAAADg/w4AAQAeAAIAAADg/w8AAQAfAAIAAADg/xAAAQAHAAIAAADh/+v/AQAFAAIAAADh/+z/AQAfAAIAAADh/+3/AQAfAAIAAADh/+7/AQAfAAIAAADh/+//AQAdAAIAAADh//D/AQAeAAIAAADh//H/AQAcAAIAAADh//L/AQAcAAIAAADh//P/AQAcAAIAAADh//T/AQAeAAIAAADh//X/AQAcAAIAAADh//b/AQAeAAIAAADh//f/AQAcAAIAAADh//j/AQAeAAIAAADh//n/AQAdAAIAAADh//r/AQAfAAIAAADh//v/AQAcAAIAAADh//z/AQAeAAIAAADh//3/AQAfAAIAAADh//7/AQAeAAIAAADh////AQAcAAIAAADh/wAAAQAeAAIAAADh/wEAAQAcAAIAAADh/wIAAQAeAAIAAADh/wMAAQAdAAIAAADh/wQAAQAfAAIAAADh/wUAAQAcAAIAAADh/wYAAQAeAAIAAADh/wcAAQAcAAIAAADh/wgAAQAeAAIAAADh/wkAAQAdAAIAAADh/woAAQAfAAIAAADh/wsAAQAcAAIAAADh/wwAAQAeAAIAAADh/w0AAQAfAAIAAADh/w4AAQAeAAIAAADh/w8AAQAcAAIAAADh/xAAAQAFAAIAAADi/+v/AQAGAAIAAADi/+z/AQAfAAIAAADi/+3/AQAdAAIAAADi/+7/AQAeAAIAAADi/+//AQAfAAIAAADi//D/AQAeAAIAAADi//H/AQAdAAIAAADi//L/AQAfAAIAAADi//P/AQAdAAIAAADi//T/AQAeAAIAAADi//X/AQAfAAIAAADi//b/AQAdAAIAAADi//f/AQAeAAIAAADi//j/AQAcAAIAAADi//n/AQAeAAIAAADi//r/AQAeAAIAAADi//v/AQAcAAIAAADi//z/AQAcAAIAAADi//3/AQAfAAIAAADi//7/AQAcAAIAAADi////AQAdAAIAAADi/wAAAQAdAAIAAADi/wEAAQAeAAIAAADi/wIAAQAcAAIAAADi/wMAAQAeAAIAAADi/wQAAQAeAAIAAADi/wUAAQAcAAIAAADi/wYAAQAcAAIAAADi/wcAAQAeAAIAAADi/wgAAQAcAAIAAADi/wkAAQAeAAIAAADi/woAAQAeAAIAAADi/wsAAQAcAAIAAADi/wwAAQAcAAIAAADi/w0AAQAfAAIAAADi/w4AAQAcAAIAAADi/w8AAQAdAAIAAADi/xAAAQAGAAIAAADj/+v/AQAHAAIAAADj/+z/AQAcAAIAAADj/+3/AQAcAAIAAADj/+7/AQAeAAIAAADj/+//AQAdAAIAAADj//D/AQAdAAIAAADj//H/AQAfAAIAAADj//L/AQAfAAIAAADj//P/AQAeAAIAAADj//T/AQAcAAIAAADj//X/AQAeAAIAAADj//b/AQAcAAIAAADj//f/AQAeAAIAAADj//j/AQAeAAIAAADj//n/AQAfAAIAAADj//r/AQAdAAIAAADj//v/AQAdAAIAAADj//z/AQAdAAIAAADj//3/AQAeAAIAAADj//7/AQAeAAIAAADj////AQAdAAIAAADj/wAAAQAcAAIAAADj/wEAAQAeAAIAAADj/wIAAQAeAAIAAADj/wMAAQAfAAIAAADj/wQAAQAdAAIAAADj/wUAAQAdAAIAAADj/wYAAQAdAAIAAADj/wcAAQAeAAIAAADj/wgAAQAeAAIAAADj/wkAAQAfAAIAAADj/woAAQAdAAIAAADj/wsAAQAdAAIAAADj/wwAAQAdAAIAAADj/w0AAQAeAAIAAADj/w4AAQAeAAIAAADj/w8AAQAdAAIAAADj/xAAAQAHAAIAAADk/+v/AQAHAAIAAADk/+z/AQAeAAIAAADk/+3/AQAcAAIAAADk/+7/AQAcAAIAAADk/+//AQAfAAIAAADk//D/AQAfAAIAAADk//H/AQAfAAIAAADk//L/AQAeAAIAAADk//P/AQAeAAIAAADk//T/AQAcAAIAAADk//X/AQAeAAIAAADk//b/AQAdAAIAAADk//f/AQAdAAIAAADk//j/AQAeAAIAAADk//n/AQAcAAIAAADk//r/AQAdAAIAAADk//v/AQAdAAIAAADk//z/AQAdAAIAAADk//3/AQAfAAIAAADk//7/AQAdAAIAAADk////AQAcAAIAAADk/wAAAQAdAAIAAADk/wEAAQAdAAIAAADk/wIAAQAeAAIAAADk/wMAAQAcAAIAAADk/wQAAQAdAAIAAADk/wUAAQAdAAIAAADk/wYAAQAdAAIAAADk/wcAAQAdAAIAAADk/wgAAQAeAAIAAADk/wkAAQAcAAIAAADk/woAAQAdAAIAAADk/wsAAQAdAAIAAADk/wwAAQAdAAIAAADk/w0AAQAfAAIAAADk/w4AAQAdAAIAAADk/w8AAQAcAAIAAADk/xAAAQAFAAIAAADl/+v/AQAEAAIAAADl/+z/AQAeAAIAAADl/+3/AQAfAAIAAADl/+7/AQAdAAIAAADl/+//AQAcAAIAAADl//D/AQAcAAIAAADl//H/AQAdAAIAAADl//L/AQAdAAIAAADl//P/AQAdAAIAAADl//T/AQAdAAIAAADl//X/AQAcAAIAAADl//b/AQAcAAIAAADl//f/AQAfAAIAAADl//j/AQAdAAIAAADl//n/AQAeAAIAAADl//r/AQAfAAIAAADl//v/AQAeAAIAAADl//z/AQAdAAIAAADl//3/AQAdAAIAAADl//7/AQAfAAIAAADl////AQAeAAIAAADl/wAAAQAcAAIAAADl/wEAAQAfAAIAAADl/wIAAQAdAAIAAADl/wMAAQAeAAIAAADl/wQAAQAfAAIAAADl/wUAAQAeAAIAAADl/wYAAQAdAAIAAADl/wcAAQAfAAIAAADl/wgAAQAdAAIAAADl/wkAAQAeAAIAAADl/woAAQAfAAIAAADl/wsAAQAeAAIAAADl/wwAAQAdAAIAAADl/w0AAQAdAAIAAADl/w4AAQAfAAIAAADl/w8AAQAeAAIAAADl/xAAAQAGAAIAAADm/+v/AQAFAAIAAADm/+z/AQAdAAIAAADm/+3/AQAcAAIAAADm/+7/AQAfAAIAAADm/+//AQAeAAIAAADm//D/AQAfAAIAAADm//H/AQAcAAIAAADm//L/AQAdAAIAAADm//P/AQAfAAIAAADm//T/AQAfAAIAAADm//X/AQAdAAIAAADm//b/AQAfAAIAAADm//f/AQAfAAIAAADm//j/AQAdAAIAAADm//n/AQAeAAIAAADm//r/AQAcAAIAAADm//v/AQAcAAIAAADm//z/AQAdAAIAAADm//3/AQAfAAIAAADm//7/AQAcAAIAAADm////AQAfAAIAAADm/wAAAQAfAAIAAADm/wEAAQAfAAIAAADm/wIAAQAdAAIAAADm/wMAAQAeAAIAAADm/wQAAQAcAAIAAADm/wUAAQAcAAIAAADm/wYAAQAdAAIAAADm/wcAAQAfAAIAAADm/wgAAQAdAAIAAADm/wkAAQAeAAIAAADm/woAAQAcAAIAAADm/wsAAQAcAAIAAADm/wwAAQAdAAIAAADm/w0AAQAfAAIAAADm/w4AAQAcAAIAAADm/w8AAQAfAAIAAADm/xAAAQAFAAIAAADn/+v/AQAFAAIAAADn/+z/AQAdAAIAAADn/+3/AQAeAAIAAADn/+7/AQAeAAIAAADn/+//AQAfAAIAAADn//D/AQAfAAIAAADn//H/AQAdAAIAAADn//L/AQAcAAIAAADn//P/AQAeAAIAAADn//T/AQAeAAIAAADn//X/AQAeAAIAAADn//b/AQAcAAIAAADn//f/AQAfAAIAAADn//j/AQAeAAIAAADn//n/AQAcAAIAAADn//r/AQAeAAIAAADn//v/AQAcAAIAAADn//z/AQAdAAIAAADn//3/AQAdAAIAAADn//7/AQAeAAIAAADn////AQAdAAIAAADn/wAAAQAcAAIAAADn/wEAAQAfAAIAAADn/wIAAQAeAAIAAADn/wMAAQAcAAIAAADn/wQAAQAeAAIAAADn/wUAAQAcAAIAAADn/wYAAQAdAAIAAADn/wcAAQAfAAIAAADn/wgAAQAeAAIAAADn/wkAAQAcAAIAAADn/woAAQAeAAIAAADn/wsAAQAcAAIAAADn/wwAAQAdAAIAAADn/w0AAQAdAAIAAADn/w4AAQAeAAIAAADn/w8AAQAdAAIAAADn/xAAAQAEAAIAAADo/+v/AQAFAAIAAADo/+z/AQAfAAIAAADo/+3/AQAdAAIAAADo/+7/AQAeAAIAAADo/+//AQAfAAIAAADo//D/AQAdAAIAAADo//H/AQAcAAIAAADo//L/AQAfAAIAAADo//P/AQAdAAIAAADo//T/AQAeAAIAAADo//X/AQAeAAIAAADo//b/AQAdAAIAAADo//f/AQAeAAIAAADo//j/AQAfAAIAAADo//n/AQAdAAIAAADo//r/AQAcAAIAAADo//v/AQAcAAIAAADo//z/AQAcAAIAAADo//3/AQAfAAIAAADo//7/AQAcAAIAAADo////AQAcAAIAAADo/wAAAQAdAAIAAADo/wEAAQAeAAIAAADo/wIAAQAfAAIAAADo/wMAAQAdAAIAAADo/wQAAQAcAAIAAADo/wUAAQAcAAIAAADo/wYAAQAcAAIAAADo/wcAAQAeAAIAAADo/wgAAQAfAAIAAADo/wkAAQAdAAIAAADo/woAAQAcAAIAAADo/wsAAQAcAAIAAADo/wwAAQAcAAIAAADo/w0AAQAfAAIAAADo/w4AAQAcAAIAAADo/w8AAQAcAAIAAADo/xAAAQAGAAIAAADp/+v/AQAEAAIAAADp/+z/AQAFAAIAAADp/+3/AQAFAAIAAADp/+7/AQAEAAIAAADp/+//AQAHAAIAAADp//D/AQAFAAIAAADp//H/AQAHAAIAAADp//L/AQAFAAIAAADp//P/AQAFAAIAAADp//T/AQAGAAIAAADp//X/AQAEAAIAAADp//b/AQAGAAIAAADp//f/AQAEAAIAAADp//j/AQAGAAIAAADp//n/AQAHAAIAAADp//r/AQAEAAIAAADp//v/AQAEAAIAAADp//z/AQAFAAIAAADp//3/AQAGAAIAAADp//7/AQAFAAIAAADp////AQAHAAIAAADp/wAAAQAGAAIAAADp/wEAAQAEAAIAAADp/wIAAQAGAAIAAADp/wMAAQAHAAIAAADp/wQAAQAEAAIAAADp/wUAAQAEAAIAAADp/wYAAQAFAAIAAADp/wcAAQAEAAIAAADp/wgAAQAGAAIAAADp/wkAAQAHAAIAAADp/woAAQAEAAIAAADp/wsAAQAEAAIAAADp/wwAAQAFAAIAAADp/w0AAQAGAAIAAADp/w4AAQAFAAIAAADp/w8AAQAHAAIAAADp/xAAAQAHAAIAAAA=")
tile_set = ExtResource("6_85t3v")

[node name="HighlightPath" type="TileMapLayer" parent="Level"]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true
tile_set = ExtResource("6_85t3v")

[node name="Walls" type="TileMapLayer" parent="Level"]
unique_name_in_owner = true
z_index = 2
y_sort_enabled = true
tile_map_data = PackedByteArray("AADo/+//AQAwAAMAAADo//D/AQAwAAMAAADo//H/AQAwAAMAAADo//L/AQAwAAMAAADo//P/AQAwAAMAAADo//T/AQAwAAMAAADo//X/AQAwAAMAAADo//b/AQAwAAMAAADo//f/AQAwAAMAAADo//j/AQAwAAMAAADo//n/AQAwAAMAAADo//r/AQAwAAMAAADo//v/AQAwAAMAAADo//z/AQAwAAMAAADo//3/AQAwAAMAAADo//7/AQAwAAMAAADo////AQAwAAMAAADo/wAAAQAwAAMAAADo/wEAAQAwAAMAAADo/wIAAQAwAAMAAADo/wMAAQAwAAMAAADo/wQAAQAwAAMAAADo/wUAAQAwAAMAAADo/wYAAQAwAAMAAADo/wcAAQAwAAMAAADo/wgAAQAwAAMAAADo/wkAAQAwAAMAAADo/woAAQAwAAMAAADo/wsAAQAwAAMAAADo/wwAAQAwAAMAAADo/w0AAQAwAAMAAADo/w4AAQAwAAMAAADo/w8AAQAwAAMAAADo/+z/AQAwAAMAAADo/+3/AQAwAAMAAADo/+7/AQAwAAMAAADW/+z/AQAxAAMAAADW/+3/AQAxAAMAAADW/+7/AQAxAAMAAADW/+//AQAxAAMAAADW//D/AQAxAAMAAADW//H/AQAxAAMAAADW//L/AQAxAAMAAADW//P/AQAxAAMAAADW//T/AQAxAAMAAADW//X/AQAxAAMAAADW//b/AQAxAAMAAADW//f/AQAwAAMAAADW//j/AQAwAAMAAADW//n/AQAwAAMAAADW//r/AQAwAAMAAADW//v/AQAwAAMAAADW//z/AQAwAAMAAADW//3/AQAwAAMAAADW//7/AQAwAAMAAADW////AQAwAAMAAADW/wAAAQAwAAMAAADW/wEAAQAwAAMAAADW/wIAAQAwAAMAAADW/wMAAQAwAAMAAADW/wQAAQAwAAMAAADW/wUAAQAwAAMAAADW/wYAAQAwAAMAAADW/wcAAQAwAAMAAADW/wgAAQAwAAMAAADW/wkAAQAwAAMAAADW/woAAQAwAAMAAADW/wsAAQAwAAMAAADW/wwAAQAwAAMAAADW/w0AAQAwAAMAAADW/w4AAQAwAAMAAADW/w8AAQAwAAMAAADX/+z/AQAxAAMAAADX/+3/AQAxAAMAAADX/+7/AQAxAAMAAADX/+//AQAxAAMAAADX//D/AQAxAAMAAADX//H/AQAxAAMAAADX//L/AQAxAAMAAADX//P/AQAxAAMAAADX//T/AQAlAAEAAADX//X/AQAzAAEAAADX//b/AQAzAAEAAADX//f/AQAgAAEAAADX//j/AQAkAAEAAADX//n/AQAgAAEAAADX//v/AQAkAAEAAADX//z/AQAzAAEAAADX//3/AQAwAAMAAADX//7/AQAwAAMAAADX////AQAwAAMAAADX/wAAAQAwAAMAAADX/wEAAQAwAAMAAADX/wIAAQAwAAMAAADX/wMAAQAwAAMAAADX/wQAAQAwAAMAAADX/wUAAQAwAAMAAADX/wYAAQAwAAMAAADX/wcAAQAwAAMAAADX/wgAAQAwAAMAAADX/wkAAQAwAAMAAADX/woAAQAwAAMAAADX/wsAAQAwAAMAAADX/wwAAQAwAAMAAADX/w0AAQAwAAMAAADX/w4AAQAwAAMAAADX/w8AAQAwAAMAAADY/+z/AQAwAAMAAADY/+3/AQAxAAMAAADY/+7/AQAxAAMAAADY/+//AQAxAAMAAADY//D/AQAxAAMAAADY//H/AQAxAAMAAADY//L/AQAxAAMAAADY//P/AQAlAAEAAADY//T/AQAgAAEAAADY//3/AQAwAAMAAADY//7/AQAwAAMAAADY////AQAwAAMAAADY/wAAAQAwAAMAAADY/wEAAQAwAAMAAADY/wIAAQAwAAMAAADY/wMAAQAwAAMAAADY/wQAAQAwAAMAAADY/wUAAQAwAAMAAADY/wYAAQAwAAMAAADY/wcAAQAwAAMAAADY/wgAAQAwAAMAAADY/wkAAQAwAAMAAADY/woAAQAwAAMAAADY/wsAAQAwAAMAAADY/wwAAQAwAAMAAADY/w0AAQAwAAMAAADY/w4AAQAwAAMAAADY/w8AAQAwAAMAAADZ/+z/AQAwAAMAAADZ/+3/AQAwAAMAAADZ/+7/AQAwAAMAAADZ/+//AQAwAAMAAADZ//D/AQAxAAMAAADZ//H/AQAxAAMAAADZ//L/AQAxAAMAAADZ//P/AQAgAAEAAADZ//7/AQAwAAMAAADZ////AQAwAAMAAADZ/wAAAQAwAAMAAADZ/wEAAQAwAAMAAADZ/wIAAQAwAAMAAADZ/wMAAQAwAAMAAADZ/wQAAQAwAAMAAADZ/wUAAQAwAAMAAADZ/wYAAQAwAAMAAADZ/wcAAQAwAAMAAADZ/wgAAQAwAAMAAADZ/wkAAQAwAAMAAADZ/woAAQAwAAMAAADZ/wsAAQAwAAMAAADZ/wwAAQAwAAMAAADZ/w0AAQAwAAMAAADZ/w4AAQAwAAMAAADZ/w8AAQAwAAMAAADa/+z/AQAwAAMAAADa/+3/AQAwAAMAAADa/+7/AQAwAAMAAADa/+//AQAwAAMAAADa//D/AQAwAAMAAADa//H/AQAwAAMAAADa//L/AQAtAAMAAADa//n/AQAsAAMAAADa////AQAlAAEAAADa/wAAAQAzAAEAAADa/wEAAQAzAAEAAADa/wIAAQAzAAEAAADa/wMAAQAzAAEAAADa/wQAAQAzAAEAAADa/wUAAQAnAAEAAADa/wYAAQAwAAMAAADa/wcAAQAwAAMAAADa/wgAAQAwAAMAAADa/wkAAQAwAAMAAADa/woAAQAwAAMAAADa/wsAAQAwAAMAAADa/wwAAQAwAAMAAADa/w0AAQAwAAMAAADa/w4AAQAwAAMAAADa/w8AAQAwAAMAAADb/+z/AQAwAAMAAADb/+3/AQAwAAMAAADb/+7/AQAwAAMAAADb/+//AQAwAAMAAADb//D/AQAwAAMAAADb//H/AQAlAAEAAADb//X/AQAfAAEAAADb//j/AQAwAAMAAADb//n/AQAwAAMAAADb//r/AQAwAAMAAADb//v/AQAwAAMAAADb////AQAgAAEAAADb/wUAAQAyAAEAAADb/wYAAQAwAAMAAADb/wcAAQAwAAMAAADb/wgAAQAwAAMAAADb/wkAAQAwAAMAAADb/woAAQAwAAMAAADb/wsAAQAwAAMAAADb/wwAAQAwAAMAAADb/w0AAQAwAAMAAADb/w4AAQAwAAMAAADb/w8AAQAwAAMAAADc/+7/AQAtAAMAAADc/+//AQAwAAMAAADc//D/AQAtAAMAAADc//H/AQAgAAEAAADc//P/AQAhAAEAAADc//T/AQAlAAEAAADc//X/AQAgAAEAAADc//f/AQAnAAEAAADc//j/AQAwAAMAAADc//n/AQAwAAMAAADc//r/AQAwAAMAAADc//v/AQAwAAMAAADc//z/AQAlAAEAAADc//3/AQAgAAEAAADc/wYAAQAlAAEAAADc/wcAAQAzAAEAAADc/wgAAQAzAAEAAADc/wkAAQAnAAEAAADc/woAAQAwAAMAAADc/wsAAQAwAAMAAADc/wwAAQAwAAMAAADc/w0AAQAwAAMAAADc/w4AAQAwAAMAAADc/w8AAQAwAAMAAADd/+//AQAkAAEAAADd//j/AQAwAAMAAADd//n/AQAwAAMAAADd//r/AQAlAAEAAADd//v/AQAzAAEAAADd//z/AQAgAAEAAADd/wMAAQAlAAEAAADd/wQAAQAzAAEAAADd/wYAAQAgAAEAAADd/wkAAQAkAAEAAADd/woAAQAzAAEAAADd/wsAAQAzAAEAAADd/wwAAQAzAAEAAADd/w0AAQAzAAEAAADd/w4AAQAzAAEAAADd/w8AAQAzAAEAAADe//j/AQAwAAMAAADe//n/AQAlAAEAAADe//r/AQAgAAEAAADe/wEAAQAkAAEAAADe/wIAAQAzAAEAAADe/wMAAQAgAAEAAADf/+v/AQASAAMAAADf//f/AQAkAAEAAADf//j/AQAgAAEAAADg//7/AQAuAAMAAADg////AQAwAAMAAADg/wAAAQAlAAEAAADg/wEAAQAgAAEAAADh//f/AQAhAAEAAADh//j/AQAfAAEAAADh//v/AQAlAAEAAADh//7/AQAuAAMAAADh////AQAwAAMAAADh/wAAAQAxAAEAAADh/wgAAQAwAAMAAADh/wkAAQAwAAMAAADh/woAAQAwAAMAAADh/wsAAQAwAAMAAADh/wwAAQAwAAMAAADh/w0AAQAwAAMAAADh/w4AAQAwAAMAAADh/w8AAQAwAAMAAADi//T/AQAsAAMAAADi//f/AQAyAAEAAADi//j/AQAjAAEAAADi//7/AQAwAAMAAADi////AQAlAAEAAADi/wAAAQAgAAEAAADi/wcAAQAuAAMAAADi/wgAAQAwAAMAAADi/wkAAQAwAAMAAADi/woAAQAwAAMAAADi/wsAAQAwAAMAAADi/wwAAQAwAAMAAADi/w0AAQAwAAMAAADi/w4AAQAwAAMAAADi/w8AAQAwAAMAAADj//L/AQAuAAMAAADj//P/AQAwAAMAAADj//T/AQAwAAMAAADj//X/AQAwAAMAAADj//f/AQAkAAEAAADj//j/AQAwAAMAAADj//n/AQAwAAMAAADj//r/AQAsAAMAAADj//7/AQAnAAEAAADj////AQAlAAEAAADj/wAAAQAgAAEAAADj/wYAAQAvAAMAAADj/wcAAQAwAAMAAADj/wgAAQAwAAMAAADj/wkAAQAwAAMAAADj/woAAQAwAAMAAADj/wsAAQAwAAMAAADj/wwAAQAwAAMAAADj/w0AAQAwAAMAAADj/w4AAQAwAAMAAADj/w8AAQAwAAMAAADk/+z/AQAwAAMAAADk/+3/AQAsAAMAAADk/+7/AQAwAAMAAADk/+//AQAxAAEAAADk//L/AQAuAAMAAADk//P/AQAwAAMAAADk//T/AQAwAAMAAADk//X/AQAtAAMAAADk//j/AQAvAAMAAADk//n/AQAlAAEAAADk//r/AQAzAAEAAADk//v/AQAgAAEAAADk/wUAAQAvAAMAAADk/wYAAQAwAAMAAADk/wcAAQAwAAMAAADk/wgAAQAwAAMAAADk/wkAAQAwAAMAAADk/woAAQAwAAMAAADk/wsAAQAwAAMAAADk/wwAAQAwAAMAAADk/w0AAQAwAAMAAADk/w4AAQAwAAMAAADk/w8AAQAwAAMAAADl/+z/AQAwAAMAAADl/+3/AQAwAAMAAADl/+7/AQAwAAMAAADl/+//AQAwAAMAAADl//D/AQAwAAMAAADl//H/AQAwAAMAAADl//L/AQAwAAMAAADl//P/AQAwAAMAAADl//T/AQAwAAMAAADl//X/AQAwAAMAAADl//n/AQAgAAEAAADl//7/AQAjAAEAAADl////AQAfAAEAAADl/wUAAQAvAAMAAADl/wYAAQAwAAMAAADl/wcAAQAwAAMAAADl/wgAAQAwAAMAAADl/wkAAQAwAAMAAADl/woAAQAwAAMAAADl/wsAAQAwAAMAAADl/wwAAQAwAAMAAADl/w0AAQAwAAMAAADl/w4AAQAwAAMAAADl/w8AAQAwAAMAAADm/+z/AQAwAAMAAADm/+3/AQAwAAMAAADm/+7/AQAwAAMAAADm/+//AQAwAAMAAADm//D/AQAwAAMAAADm//H/AQAwAAMAAADm//L/AQAwAAMAAADm//P/AQAwAAMAAADm//T/AQAwAAMAAADm//X/AQAwAAMAAADm//b/AQAwAAMAAADm//f/AQAuAAMAAADm//7/AQAwAAMAAADm////AQAxAAEAAADm/wYAAQAvAAMAAADm/wcAAQAwAAMAAADm/wgAAQAwAAMAAADm/wkAAQAwAAMAAADm/woAAQAwAAMAAADm/wsAAQAwAAMAAADm/wwAAQAwAAMAAADm/w0AAQAwAAMAAADm/w4AAQAwAAMAAADm/w8AAQAwAAMAAADn/+z/AQAwAAMAAADn/+3/AQAwAAMAAADn/+7/AQAwAAMAAADn/+//AQAwAAMAAADn//D/AQAwAAMAAADn//H/AQAwAAMAAADn//L/AQAwAAMAAADn//P/AQAwAAMAAADn//T/AQAwAAMAAADn//X/AQAwAAMAAADn//b/AQAwAAMAAADn//f/AQAwAAMAAADn//j/AQAjAAEAAADn//3/AQAnAAEAAADn//7/AQAwAAMAAADn////AQAwAAMAAADn/wAAAQAjAAEAAADn/wIAAQAwAAMAAADn/wMAAQAsAAMAAADn/wQAAQAsAAMAAADn/wcAAQAwAAMAAADn/wgAAQAwAAMAAADn/wkAAQAwAAMAAADn/woAAQAwAAMAAADn/wsAAQAwAAMAAADn/wwAAQAwAAMAAADn/w0AAQAwAAMAAADn/w4AAQAwAAMAAADn/w8AAQAwAAMAAAA=")
tile_set = ExtResource("6_85t3v")

[node name="Items" type="TileMapLayer" parent="Level"]
unique_name_in_owner = true
z_index = 4
y_sort_enabled = true
tile_map_data = PackedByteArray("AADh/+//AQAUAAMAAAA=")
tile_set = ExtResource("6_85t3v")

[node name="TopDownCamera2D" type="Camera2D" parent="Level"]
unique_name_in_owner = true
script = ExtResource("7_8avtb")
metadata/_custom_type_script = "uid://dedftrkeydnae"

[node name="CanvasLayer" type="CanvasLayer" parent="Level"]
unique_name_in_owner = true

[node name="MouseTooltipLabel" type="Label" parent="Level/CanvasLayer"]
top_level = true
offset_right = 49.0
offset_bottom = 34.0
text = "Test"
label_settings = SubResource("LabelSettings_m77gi")
metadata/_edit_use_anchors_ = true

[node name="InitialSpawnPosition" type="Marker2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(-5865, -1245)

[node name="StateMachine" type="Node" parent="Level" node_paths=PackedStringArray("initial_state", "common_node")]
script = ExtResource("8_ua84b")
initial_state = NodePath("InitLevel")
common_node = NodePath("../..")
metadata/_custom_type_script = "uid://cyjj3nyqr8e3y"

[node name="InitLevel" type="Node" parent="Level/StateMachine"]
script = ExtResource("10_ua84b")
metadata/_custom_type_script = "uid://dsnjlxvj4s1uu"

[node name="ExplorerTurn" type="Node" parent="Level/StateMachine"]
script = ExtResource("10_27a66")
metadata/_custom_type_script = "uid://dsnjlxvj4s1uu"

[node name="PlayerTurn" type="Node" parent="Level/StateMachine"]
script = ExtResource("9_hehv2")
metadata/_custom_type_script = "uid://dsnjlxvj4s1uu"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/NextTurnButton" to="." method="_on_next_turn_button_pressed"]
